# QuestBot

./: .dockerignore  .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  install_vk-api.sh  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: makefile.yml  python-app.yml
src/: main.py
src/bot/: bot.py
src/models/: quest_model.py
src/services/: reward_service.py
tests/: test_models.py
