[tool.poetry]
name = "quest-bot"
version = "0.1.0"
description = "Квестовый бот для игры Подземелья Колодца"
authors = ["shishka-danil@mail.ru"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.13"
logger= "1.4"
pydantic= "2.10.3"
SQLAlchemy= "2.0.36"


[tool.poetry.dev-dependencies]
pytest= "8.3.4"
black= "24.10.0"
flake8= "7.1.1"

[build-system]
requires = ["poetry-core==1.9.1"]
build-backend = "poetry.core.masonry.api"
